switched from port 3000 to 3001

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "idx": "^2.5.6"
   },
   "scripts": {
-    "dev": "node_modules/.bin/nodemon app/index.js",
+    "dev": "nodemon app/index.js ",
     "start": "node app/index.js"
   }
 }
